microservices/app-music/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-music
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-music
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-music
    spec:
      containers:
        - name: app-music
          image: k3d-example-registry:5000/app-music
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
