microservices/app-music/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-music
spec:
  selector:
    app.kubernetes.io/name: app-music
  ports:
    - name: http
      port: 80
      targetPort: http
