microservices/app-music/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-music
spec:
  rules:
    - host: music.app.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-music
                port:
                  name: http
